--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Course project",
   "main": "index.js",
   "scripts": {
-    "build": "del dist && webpack",
+    "build": "webpack --mode production",
     "dev": "webpack serve --mode development"
   },
   "repository": {
@@ -27,7 +27,13 @@
   "devDependencies": {
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.4",
+    "autoprefixer": "^10.4.0",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.5.1",
+    "cssnano": "^5.0.12",
     "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.4.5",
+    "postcss-loader": "^6.2.1",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.6.0"
   },
