--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
-    "dev": "webpack serve --mode development"
+    "dev": "webpack serve --mode development",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -31,6 +33,7 @@
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.5.1",
     "cssnano": "^5.0.12",
+    "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.4.5",
     "postcss-loader": "^6.2.1",
@@ -40,6 +43,9 @@
   "dependencies": {
     "babel-loader": "^8.2.3",
     "copy-webpack-plugin": "^10.0.0",
-    "core-js": "^3.19.3"
+    "core-js": "^3.19.3",
+    "follow-redirects": "^1.14.7",
+    "nanoid": "^3.2.0",
+    "node-forge": "^1.2.1"
   }
 }
